Build url for file and show message with info about the private link

--- a/res/layout/share_file_layout.xml
+++ b/res/layout/share_file_layout.xml
@@ -50,6 +50,7 @@
                 android:layout_marginRight="@dimen/standard_half_margin"
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@+id/shareFileIcon"
+                android:layout_toLeftOf="@+id/getPrivateLinkButton"
                 android:layout_toRightOf="@+id/shareFileIcon"
                 android:ellipsize="middle"
                 android:singleLine="true"
